# research-engine-api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json  wsgi.py
api/: index.py
app/: __init__.py  config.py  extensions.py  observability.py  schemas.py  version.py
app/api/: __init__.py  serve.py
app/api/v1/: __init__.py  academic.py  companies.py  concepts.py  health.py  jobs.py  research.py  roles.py  security.py  slides.py
app/auth/: __init__.py  cli.py  middleware.py  models.py
app/connectors/: __init__.py  arxiv.py  base.py  esco.py  gdelt.py  github.py  http_source.py  mitre_attack.py  nvd.py  sec_edgar.py  stackexchange.py  wikidata.py  wikipedia.py
app/core/: __init__.py  aggregator.py  attribution.py  cache.py  compose.py  context.py  engine.py  envelope.py  http.py  intents.py  mapping.py  router.py  ssrf.py  util.py
app/processing/: __init__.py  keywords.py  tone.py
console/: app.js  index.html  styles.css
docs/: API_SPEC.md
migrations/versions/: 2963d1aa9ef8_initial_schema_tenants_api_keys_usage_.py
tests/: conftest.py  test_auth.py  test_batch_meta.py  test_company_news.py  test_company_role.py  test_compose.py  test_config.py  test_domains.py  test_health.py  test_jobs.py  test_live.py  test_processing.py  test_rate_limit.py  test_research.py
