[project]
name = "research-engine-api"
version = "0.1.0"
description = "Source-agnostic, no-LLM knowledge-retrieval engine. Callers declare an intent; the engine routes to reputable sources, fetches in parallel, and returns structured JSON with provenance."
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.0",
    "flask-smorest>=0.44",
    "marshmallow>=3.19,<4",
    "flask-cors>=4.0",
    "Flask-Limiter>=3.5",
    "Flask-Caching>=2.1",
    "httpx>=0.27",
    "tenacity>=8.2",
    "pybreaker>=1.2",
    "python-dotenv>=1.0",
    "structlog>=24.1",
]

[project.optional-dependencies]
# Processing utilities (Phase 5) — kept optional so the core installs lean.
processing = [
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "readability-lxml>=0.8.1",
    "rapidfuzz>=3.9",
]
# Production server for self-hosting (not used on Vercel, which provides the server).
prod = [
    "gunicorn>=22.0; platform_system != 'Windows'",
    "waitress>=3.0",
]
dev = [
    "pytest>=8.2",
    "pytest-flask>=1.3",
    "respx>=0.21",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["B008"]  # flask-smorest decorators legitimately call in defaults

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: tests that hit real upstream sources (run manually, not in CI)",
]
